syntax = "proto3";

option csharp_namespace = "Chat.Protos";

package chat;

// Сервис чата
service ChatService {
  // Подключение к чату (стриминг сообщений)
  rpc Connect (stream ChatMessage) returns (stream ChatMessage);
  
  // Отправка сообщения (для клиентов, которые не могут использовать двунаправленный стриминг)
  rpc SendMessage (ChatMessage) returns (SendResponse);
}

// Сообщение чата
message ChatMessage {
  string user_id = 1;       // ID пользователя
  string user_name = 2;     // Имя пользователя
  string content = 3;       // Содержание сообщения
  string room_id = 4;       // ID комнаты
  MessageType type = 5;     // Тип сообщения
  int64 timestamp = 6;      // Timestamp сообщения
  
  enum MessageType {
    TEXT = 0;               // Обычное текстовое сообщение
    JOIN = 1;               // Пользователь присоединился
    LEAVE = 2;              // Пользователь покинул чат
    SYSTEM = 3;             // Системное сообщение
  }
}

// Ответ на отправку сообщения
message SendResponse {
  bool success = 1;         // Успешность отправки
  string error = 2;         // Ошибка (если есть)
  int64 timestamp = 3;      // Timestamp сообщения на сервере
}